[package]
name = "crf_tyew"
version = "0.1.0"
edition = "2021"
authors = ["NGnius (Graham) <ngniusness@gmail.com>"]
description = "Unofficial website for browsing the CRF2"

[dependencies]
yew = "0.19"
yew_icons = { version = "0.5", features = ["BootstrapBandaid", "BootstrapBox2Heart", "BootstrapCpu", "BootstrapBrush", "BootstrapBoxes", "BootstrapCoin", "LucideCurrency", "BootstrapCashCoin"] }
gloo-console = "0.2"
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"

gloo-net = { version = "0.2", features = ["http"] }
serde = { version = "1", features = ["derive"] }
serde_json = "^1"
