[package]
name = "crf_2b"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libfj = { version = "0.7.1", default-features = false, features = ["robocraft2"]}# , path = "../../libfj" }
actix-web = { version = "4", features = ["rustls", "macros", "compress-brotli", "compress-gzip", "compress-zstd"], default-features = false }
actix-files = "0.6"

serde = { version = "^1", features = ["derive"]}
serde_json = "^1"
